<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/ll_photo_display_item"
    android:orientation="vertical"
    android:background="@color/black"
    android:layout_gravity="center"
    android:paddingTop="10dp"
    android:paddingBottom="10dp"
    android:layout_margin="5dp"
    android:layout_marginBottom="5dp"
    android:layout_marginTop="5dp">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/iv_rv_photo_display_item"
        android:scaleType="center"
        android:layout_margin="2dp"
        android:src="@mipmap/ic_launcher"
        android:contentDescription="@string/string_this_is_an_imageview_in_recyclerview_item"
        android:tooltipText="@string/string_this_is_an_imageview_in_recyclerview_item"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tv_name_in_photo_display_in_rv_item"
        android:textSize="24sp"
        android:textColor="@color/white"
        android:text="@string/app_name"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:background="@drawable/border_1dp"
        android:contentDescription="@string/string_textview_showing_the_photograph_heading"
        android:tooltipText="@string/string_textview_showing_the_photograph_heading"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tv_caption_in_photo_display_in_rv_item"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:text="@string/app_name"
        android:textStyle="bold"
        android:gravity="center"
        android:background="@drawable/border_1dp"
        android:contentDescription="@string/string_textview_showing_the_photograph_heading"
        android:tooltipText="@string/string_textview_showing_the_photograph_heading"/>

</LinearLayout>